
2021-04-27  Ron Norman <rjn@inglenet.com>

	* common.c: Check COB_MODULE_PTR before using
	* common.h: Add cob_file . flag_updt_file for cobfile
	* fileio.c: Add cob_pre_open_def routine used by cobfile
	            Other changes so cobfile can copy attributes of
				one file into another before copying.

2021-04-25  Ron Norman <rjn@inglenet.com>

	* fileio.c: Check COB_MODULE_PTR before using

2021-04-03  Ron Norman <rjn@inglenet.com>

	* common.h: extern cob_sym_get_field and cob_sym_get_occurs
	* common.c: extern cob_sym_get_field and cob_sym_get_occurs
	* cobcapi.h: Add cob_get_field_value
	* cobcapi.c: Add cob_get_field_value

2021-04-01  Ron Norman <rjn@inglenet.com>

	* common.h: Add cob_trace_stmt_num  && cob_trace_get_stmt
	* common.c: Add cob_trace_stmt_num  && cob_trace_get_stmt

2021-03-29  Ron Norman <rjn@inglenet.com>

	* common.h: Split into cobcapi.c
	* call.c: C API functions split out into cobcapi.c
	* cobcapi.h: new module as header for the COBOL - C API
	* cobcapi.c: new module to hold the COBOL - C API

2021-03-26  Ron Norman <rjn@inglenet.com>

	* common.h: Add to cob_symbol values for 'is_indirect'
				Changed 'data' to 'adrs', 'indexes' to 'subscripts'
	* common.c: Adjusted for new field names, handle ANY LENGTH/NUMERIC
				
2021-03-20  Ron Norman <rjn@inglenet.com>

	* common.h: Add 'indexes' to cob_symbol 
				
2021-03-18  Ron Norman <rjn@inglenet.com>

	* common.h: New cob_symbol defined for a table of all module symbols
				Field added to cob_module for section/paragraph/verb names
	* common.c: New routines added to dump a module using the symbol table
				instead of a bunch in generated code to do it

2021-03-05  Ron Norman <rjn@inglenet.com>

	* common.h: Add flag_isnodat
	* coblocal.h: Add cob_file_isnodat
	* fileio.c: Add check for option 'isnodat'
	* fisam.c: If flag_isnodat, then pass option to V-ISAM
	           so the .dat extension is not added to datafile name

2021-03-04  Ron Norman <rjn@inglenet.com>
